added user creation logic -- server currently not available
