# backend/src/main/java/meetNow/api/controller/MobileAppController.java
@@ -17,6 +17,7 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
 import org.springframework.web.bind.annotation.ResponseBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
@@ -26,7 +27,9 @@ import meetNow.dataaccess.repositories.MeetingRepository;
 import meetNow.logic.CreateException;
 import meetNow.logic.MeetingNotFoundException;
 import meetNow.logic.MeetingProcessor;
+import meetNow.logic.UserCreator;
 import swagger.model.Meeting;
+import swagger.model.User;
 
 @CrossOrigin
 @RestController
@@ -39,18 +42,28 @@ public class MobileAppController {
 
 	@Autowired
 	private MeetingProcessor manager;
-	
+
 	@Autowired
 	private MeetingRepository repository;
+	
+	@Autowired
+	private UserCreator userCreator;
 
 	@RequestMapping("/test")
 	public String testServerUp(String test) {
 		return "OK";
 	}
 
+	@RequestMapping(value = "/newUser", produces = { "application/json" }, method = RequestMethod.POST)
+	public ResponseEntity<User> newUser (@RequestPart(value = "pushId", required = true) String pushId) throws ValidationException {
+		User user = userCreator.createUser(pushId);
+		return new ResponseEntity<User>(user, HttpStatus.OK);
+	}
+
 	@RequestMapping(value = "/meeting", consumes = { "application/json" }, method = RequestMethod.POST)
 	@ResponseStatus(HttpStatus.CREATED)
-	public @ResponseBody Map<String, String> addMeeting(@RequestBody Meeting meeting) throws ValidationException, CreateException {
+	public @ResponseBody Map<String, String> addMeeting(@RequestBody Meeting meeting)
+			throws ValidationException, CreateException {
 		validator.validateMeeting(meeting);
 		String id = manager.processNewMeeting(meeting);
 		Map<String, String> responseBody = new HashMap<>();
@@ -72,20 +85,20 @@ public class MobileAppController {
 		validator.validateMeetingId(meeting.getId());
 		manager.deleteMeeting(meeting);
 	}
-	
+
 	@RequestMapping(value = "/meeting", method = RequestMethod.GET)
 	@ResponseStatus(HttpStatus.OK)
-	public Meeting getMeeting(@RequestParam String id){
-		Meeting meeting =  repository.findOne(id);
+	public Meeting getMeeting(@RequestParam String id) {
+		Meeting meeting = repository.findOne(id);
 		return meeting;
 	}
-	
-	@RequestMapping(value= "/deleteAllMeetings", method = RequestMethod.DELETE)
-	public ResponseEntity<Void> deleteAll(){
+
+	@RequestMapping(value = "/deleteAllMeetings", method = RequestMethod.DELETE)
+	public ResponseEntity<Void> deleteAll() {
 		repository.deleteAll();
 		return new ResponseEntity<>(HttpStatus.OK);
 	}
-	
+
 	@ExceptionHandler(MeetingNotFoundException.class)
 	@ResponseStatus(HttpStatus.NOT_FOUND)
 	public String handleMeetingNotFoundException(MeetingNotFoundException e) throws Exception {
@@ -102,12 +115,10 @@ public class MobileAppController {
 	@ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
 	public @ResponseBody String handleRuntimeExceptions(Exception e, HttpServletRequest request,
 			HttpServletResponse resp) {
-		logger.error("An internal server error occurred while processing a request, method: {}, request {}, parameters", request.getMethod(), request.getRequestURL(),
-				request.getParameterMap());
+		logger.error("An internal server error occurred while processing a request, method: {}, request {}, parameters",
+				request.getMethod(), request.getRequestURL(), request.getParameterMap());
 		logger.error("Exception: ", e);
 		return "An internal error occurred";
 	}
-
-	
 
 }
