# backend/src/main/resources/api.yaml
@@ -13,6 +13,27 @@ basePath: /
 schemes:
   - http
 paths:
+  /newUser:
+    post:
+      tags: 
+        - setupCalls
+      summary: make urself known to the backend
+      operationId: newUser
+      consumes:
+        - application/x-www-form-urlencoded
+      produces:
+        - application/json
+      parameters:
+        - in: formData
+          name: pushId
+          type: string
+          required: true
+          description: the oneSignal push id
+      responses:
+        '200':
+          description: user created, returns id and secret to store
+          schema:
+            $ref: '#/definitions/User'
   /meeting:
     post:
       tags:
@@ -236,3 +257,15 @@ definitions:
         type: integer
         format: int32
         description: the radius of the area in meters
+  User:
+    type: object
+    properties:
+      id:
+        type: string
+        description: unique id given by server
+      secret:
+        type: string
+        description: random string for authentification generated by server
+      pushId:
+        type: string
+        description: oneSignal push id supplied by the client
