# mobileApp/src/app/app.component.ts
@@ -2,6 +2,7 @@ import {Component, ViewChild} from '@angular/core';
 import {Nav, Platform, Events} from 'ionic-angular';
 import {StatusBar} from '@ionic-native/status-bar';
 import {SplashScreen} from '@ionic-native/splash-screen';
+import {Storage} from '@ionic/storage';
 
 import {SettingsPage} from '../pages/settings/settings';
 
@@ -11,7 +12,7 @@ import {PlanEventPage} from '../pages/plan-event/plan-event';
 import {global} from '../services/GlobalVariables';
 
 import {MeetingApi} from '../services/MeetingApi';
-
+import {User} from "../gen/model/User";
 
 @Component({
   templateUrl: 'app.html'
@@ -27,7 +28,7 @@ export class MyApp {
   aboutPage = AboutPage;
 
   constructor(public platform: Platform, public statusBar: StatusBar, public splashScreen: SplashScreen,
-              public events: Events, public meetingApi: MeetingApi) {
+              public events: Events, public meetingApi: MeetingApi, public storage: Storage) {
     this.initializeApp();
 
     // used for an example of ngFor and navigation
@@ -53,8 +54,27 @@ export class MyApp {
         .handleNotificationOpened(notificationOpenedCallback)
         .endInit();
 
+      this.initializeAppOnFirstStartUp();
     }
   }
+
+  initializeAppOnFirstStartUp() {
+    this.storage.get("user").then(
+      (user: User) => {
+        if (user == null) {
+          this.meetingApi.newUser(global.myPlayerId).subscribe(
+            (user: User) => {
+              this.storage.set("user", user)
+            },
+            (error) => {
+              console.log("Couldn't connect to the backend, " + error)
+            }
+          );
+        }
+      }
+    );
+  }
+
 
   initializeApp() {
     this.platform.ready().then(() => {
@@ -66,8 +86,8 @@ export class MyApp {
     });
   }
 
-  initializeGeofences(){
-    if(this.platform.is("cordova")){
+  initializeGeofences() {
+    if (this.platform.is("cordova")) {
       var bgGeo = (<any>window).BackgroundGeolocation;
       bgGeo.configure({
         desiredAccuracy: 10,
@@ -75,21 +95,28 @@ export class MyApp {
         stopOnTerminate: false,
         startOnBoot: true,
         debug: true,
-      }, function(state){
-        if(!state.enabled){
-          bgGeo.startGeofences(function(state) {
+      }, function (state) {
+        if (!state.enabled) {
+          bgGeo.startGeofences(function (state) {
             console.log('- Geofence-only monitoring started', state.trackingMode);
           });
         }
       });
       // Fired whenever a geofence transition occurs.
-      bgGeo.on('geofence', function(geofence) {
+      bgGeo.on('geofence', function (geofence) {
         console.log('- onGeofence: ', geofence.identifier, geofence.location);
         let response = this.meetingApi.enterArea(123245);
-        response.subscribe()
+        response.subscribe((succ: Object) => {
+            //TODO maybe do something if the server returns no push
+            alert("Geofence transitation posted successfully");
+          },
+          (err) => {
+            alert("Failed to post location");
+          });
       });
     }
   }
+
   openPage(page) {
     // Reset the content nav to have just this page
     // we wouldn't want the back button to show in this scenario
